Fixed navbar overflow

--- a/navbar-styles.css
+++ b/navbar-styles.css
@@ -1,20 +1,20 @@
-
 .navbar-search-inactive {
-  background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+	background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
 	width: 50px;
 	outline: none;
-  border: solid 1px #ccc;
+	border: solid 1px #ccc;
 }
 
 #navbar-search[type=search] {
-  outline: none;
-  height: 35px;
-  border-radius: 10px;
+	outline: none;
+	height: 35px;
+	max-width: 80%;
+	border-radius: 10px;
 	transition: all .5s;
 }
 
 .navbar-search-active {
-  border: solid 1px green;
+	border: solid 1px green;
 	width: 80%;
 	background-color: #fff;
 	border-color: #66CC75;
